--- a/Root terminal/config.yaml
+++ b/Root terminal/config.yaml
@@ -1,17 +1,1 @@
-name: "Root Terminal"
-description: "Donne au terminal un accès root."
-version: "1.0.0"
-slug: "root_terminal"
-init: false
-map: 
-  - config:rw 
-  - ssl:rw
-  - addons:rw
-  - backup:rw
-  - share:rw
-arch:
-  - aarch64
-  - amd64
-  - armhf
-  - armv7
-  - i386
+enabled: true
