--- a/Root terminal/config.json
+++ b/Root terminal/config.json
@@ -2,18 +2,17 @@
   "name": "Root Terminal",
   "version": "1.0.0",
   "slug": "root_terminal",
-  "description": "Donne au terminal un accès root.",
-  "init": false,
-  "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
-  "map": ["config:rw", "ssl:rw", "addons:rw", "backup:rw", "share:rw"],
-  "host_network": true,
-  "privileged": ["ALL"],
-  "full_access": true,
-  "boot": "auto",
+  "description": "Accès root complet au système depuis un terminal.",
+  "arch": ["amd64", "armv7", "aarch64", "i386", "armhf"],
   "startup": "application",
+  "boot": "auto",
   "ingress": false,
-  "build": true,
+  "host_network": true,
+  "full_access": true,
+  "privileged": ["ALL"],
+  "map": ["config:rw", "mnt:rw", "backup:rw", "share:rw", "ssl:rw"],
   "schema": {
-    "enabled": "bool"
-  }
+    "log_level": "str?"
+  },
+  "build": true
 }
