--- a/Root terminal/config.yaml
+++ b/Root terminal/config.yaml
@@ -9,10 +9,18 @@ map:
   - addons:rw
   - backup:rw
   - share:rw
-   - mnt:rw
+  - mnt:rw
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
   - i386
+host_network: true
+full_access: true
+privileged:
+  - ALL
+boot: auto
+startup: application
+build_from:
+  amd64: ghcr.io/hassio-addons/base/amd64:14.1.3
